--- a/style.css
+++ b/style.css
@@ -1,16 +1,97 @@
 body {
-    
+    background-image: url(https://i.gifer.com/origin/4b/4b1784d…_w200.gif);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-color: black;
+    height: 100vh;
+    width: 100%;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden;
 }
 
 #title {
     width: 100%;
-    height: 10%;
+    height: auto;
+    color: white;
+    z-index: 5;
     position: absolute;
-    top: 0;
     text-align: center;
-    
+    top: 10%;
+    font-family: monospace;
+    text-shadow: 1px -1px black;
+    font-size: 4vh;
 }
 
 #blur {
-    
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(150px);
+}
+
+div#credits {
+    width: 20%;
+    height: 60%;
+    margin: 1%;
+    background-color: #545475;
+    border-radius: 5px;
+    font-family: monospace;
+    color: white;
+    font-size: 1.5vh;
+    text-align: center;
+    padding-top: 1.8%;
+}
+
+div#download {
+    width: 20%;
+    height: 60%;
+    margin: 1%;
+    background-color: #545475;
+    border-radius: 5px;
+    font-family: monospace;
+    color: white;
+    font-size: 1.5vh;
+    text-align: center;
+    padding-top: 1.8%;
+    position: relative;
+}
+
+div#info {
+    width: 20%;
+    height: 60%;
+    margin: 1%;
+    background-color: #545475;
+    border-radius: 5px;
+    font-family: monospace;
+    color: white;
+    font-size: 1.5vh;
+    text-align: center;
+    padding-top: 1.8%;
+    position: relative;
+}
+
+div#bar {
+    width: 30%;
+    height: 4%;
+    position: absolute;
+    border-radius: 5px;
+    background-color: #615e7754;
+    z-index: 5;
+    backdrop-filter: blur(50px);
+    margin: 1%;
+    display: flex;
+}
+
+div#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    z-index: 5;
+    background-color: #43434300;
+    color: whitesmoke;
+    font-family: monospace;
 }
