--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://i.gifer.com/origin/4b/4b1784d…_w200.gif);
+    background-image: url(https://i.redd.it/22d49lyhysw61.gif);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: 50%;
