--- a/style.css
+++ b/style.css
@@ -96,3 +96,28 @@ body {
     color: whitesmoke;
     font-family: monospace;
 }
+
+#arrowsvg {
+    width: 50%;
+    height: 50%;
+    z-index: 5;
+    fill: white;
+    animation: longate 2s backwards infinite;
+    transition: 1s;
+    position: absolute;
+    
+}
+
+@keyframes longate {
+    0% {
+        height: 50%;
+    }
+
+    50% {
+        height: 100%;
+    }
+
+    100% {
+        height: 50%;
+    }
+}
