--- a/style.css
+++ b/style.css
@@ -24,6 +24,19 @@ body {
     font-size: 4vh;
 }
 
+#subtitle {
+    width: 100%;
+    height: auto;
+    color: white;
+    z-index: 5;
+    position: absolute;
+    text-align: center;
+    top: 10%;
+    font-family: monospace;
+    text-shadow: 1px -1px black;
+    font-size: 4vh;
+}
+
 #blur {
     width: 100%;
     height: 100%;
@@ -98,19 +111,19 @@ body {
 }
 
 #arrowsvg {
-    width: 50%;
-    height: 50%;
+    width: 3%;
     z-index: 5;
     fill: white;
     animation: longate 2s backwards infinite;
     transition: 1s;
     position: absolute;
-    
+    top: 0;
+    left: 49%;
 }
 
 @keyframes longate {
     0% {
-        height: 50%;
+        height: 80%;
     }
 
     50% {
@@ -118,6 +131,6 @@ body {
     }
 
     100% {
-        height: 50%;
+        height: 80%;
     }
 }
