--- a/style.css
+++ b/style.css
@@ -31,11 +31,26 @@ body {
     z-index: 5;
     position: absolute;
     text-align: center;
-    top: 10%;
+    top: 15%;
     font-family: monospace;
     text-shadow: 1px -1px black;
-    font-size: 4vh;
+    font-size: 1.5vh;
+    opacity: 0;
+    transition: 2s;
+    animation: blink 2s;
 }
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+
 
 #blur {
     width: 100%;
@@ -111,14 +126,14 @@ body {
 }
 
 #arrowsvg {
-    width: 3%;
+    width: 1%;
     z-index: 5;
     fill: white;
     animation: longate 5s backwards infinite;
     transition: 1s;
     position: absolute;
     top: 0;
-    left: 49%;
+    left: 49.5%;
 }
 
 @keyframes longate {
