--- a/style.css
+++ b/style.css
@@ -149,3 +149,46 @@ body {
         height: 80%;
     }
 }
+
+#getstartedbt {
+    position: absolute;
+    top: 36%;
+    left: 44%;
+    border: none;
+    background-color: #406e9542;
+    font-family: monospace;
+    color: white;
+    font-weight: 1000;
+    border-radius: 5px;
+    height: 3%;
+    width: 12%;
+    box-shadow: 0px 4px 2px 1px rgb(0 0 0 / 4%);
+    z-index: 8;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+
+
+#getstartedbt:before {
+    content: "";
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    pointer-events: none;
+    transform-origin: center;
+    top: calc(var(--y) * 1px);
+    left: calc(var(--x) * 1px);
+    width: calc(var(--d) * 1px);
+    height: calc(var(--d) * 1px);
+    background: var(--ripple-background, white);
+    transform: translate(-50%, -50%) scale(var(--s, 1));
+    opacity: calc(var(--o, 1) * var(--ripple-opacity, 0.3));
+    transition: calc(var(--t, 0) * var(--ripple-duration, 600ms)) var(--ripple-easing, linear);
+}
