--- a/style.css
+++ b/style.css
@@ -165,30 +165,23 @@ body {
     box-shadow: 0px 4px 2px 1px rgb(0 0 0 / 4%);
     z-index: 8;
     cursor: pointer;
+    transition: box-shadow 200ms ease-in-out;
     overflow: hidden;
-    position: relative;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-
-
-#getstartedbt:before {
-    content: "";
-    display: block;
-    border-radius: 50%;
+.button-ripple {
     position: absolute;
     pointer-events: none;
-    transform-origin: center;
-    top: calc(var(--y) * 1px);
-    left: calc(var(--x) * 1px);
-    width: calc(var(--d) * 1px);
-    height: calc(var(--d) * 1px);
-    background: var(--ripple-background, white);
-    transform: translate(-50%, -50%) scale(var(--s, 1));
-    opacity: calc(var(--o, 1) * var(--ripple-opacity, 0.3));
-    transition: calc(var(--t, 0) * var(--ripple-duration, 600ms)) var(--ripple-easing, linear);
-}
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.7);
+    transform: scale(0);
+    animation: zoomIn 500ms ease-in;
+  }
+
+  @keyframes zoomIn {
+    to {
+      transform: scale(1);
+      opacity: 0;
+    }
+  }
+  
