--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
     animation: longate 5s backwards infinite;
     transition: 1s;
     position: absolute;
-    top: 0;
+    top: -18%;
     left: 49.5%;
 }
 
@@ -153,17 +153,18 @@ body {
 #getstartedbt {
     position: absolute;
     top: 36%;
-    left: 44%;
+    left: 41%;
     border: none;
     background-color: #406e9542;
     font-family: monospace;
     color: white;
     font-weight: 1000;
     border-radius: 5px;
-    height: 3%;
-    width: 12%;
+    height: 5%;
+    width: 18%;
     box-shadow: 0px 4px 2px 1px rgb(0 0 0 / 4%);
     z-index: 8;
+    font-size: 3vh;
     cursor: pointer;
     transition: box-shadow 200ms ease-in-out;
     overflow: hidden;
