--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ body {
     cursor: pointer;
     transition: box-shadow 200ms ease-in-out;
     overflow: hidden;
+    opacity: 1;
 }
 
 .button-ripple {
