--- a/style.css
+++ b/style.css
@@ -187,3 +187,53 @@ body {
     }
   }
   
+  div#menu {
+    width: 50%;
+    height: 50%;
+    background-color: #0000001a;
+    position: absolute;
+    top: 28%;
+    left: 25%;
+    border-radius: 25px;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 7;
+}
+
+div#scroll {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    background-color: #00000000;
+    width: 7%;
+    height: 100%;
+}
+
+div#point {
+    border: 2px solid white;
+    height: 2%;
+    width: 30%;
+    border-radius: 5px;
+    margin: 35%;
+}
+
+span#scrolltext {
+    color: white;
+    font-family: monospace;
+    position: relative;
+    top: -65%;
+    left: 200%;
+}
+
+div#line {
+    background-color: white;
+    height: 24%;
+    width: 3%;
+    border-radius: 5px;
+    margin: 0;
+    position: relative;
+    left: 51%;
+}
