--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ body {
     opacity: 0;
     visibility: hidden;
     z-index: 7;
+    transition: 200ms;
 }
 
 div#scroll {
@@ -212,7 +213,7 @@ div#scroll {
     height: 100%;
 }
 
-div#point {
+#point1, #point2, #point3 {
     border: 2px solid white;
     height: 2%;
     width: 30%;
@@ -220,12 +221,13 @@ div#point {
     margin: 35%;
 }
 
-span#scrolltext {
+#scrolltext1, #scrolltext2, #scrolltext3 {
     color: white;
     font-family: monospace;
     position: relative;
     top: -65%;
     left: 200%;
+    cursor: pointer;
 }
 
 div#line {
