--- a/style.css
+++ b/style.css
@@ -247,3 +247,43 @@ div#cred {
     height: 100%;
     background-color: #ff000000;
 }
+
+
+div#cred {
+    position: absolute;
+    width: 83%;
+    right: 0;
+    height: 100%;
+    background-color: #ff000000;
+}
+
+div#profile {
+    position: relative;
+    width: 100%;
+    height: 10%;
+    background: #00000000;
+    top: 9%;
+    display: flex;
+    align-content: stretch;
+    align-items: center;
+}
+
+img#pfp {
+    width: 5%;
+    border-radius: 10px;
+    position: relative;
+    margin: 1%;
+}
+
+
+img#pfp:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+}
+
+div#pfptext {
+    color: white;
+    font-family: monospace;
+    position: relative;
+}
