--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ div#scroll {
     cursor: pointer;
 }
 
-div#line {
+#line {
     background-color: white;
     height: 24%;
     width: 3%;
@@ -240,7 +240,7 @@ div#line {
     left: 51%;
 }
 
-div#cred {
+.box {
     position: absolute;
     width: 83%;
     right: 0;
@@ -248,16 +248,7 @@ div#cred {
     background-color: #ff000000;
 }
 
-
-div#cred {
-    position: absolute;
-    width: 83%;
-    right: 0;
-    height: 100%;
-    background-color: #ff000000;
-}
-
-div#profile {
+#profile {
     position: relative;
     width: 100%;
     height: 10%;
@@ -268,7 +259,7 @@ div#profile {
     align-items: center;
 }
 
-img#pfp {
+#pfp {
     width: 5%;
     border-radius: 10px;
     position: relative;
@@ -276,13 +267,13 @@ img#pfp {
 }
 
 
-img#pfp:after {
+#pfp:after {
     content: "";
     display: block;
     padding-bottom: 100%;
 }
 
-div#pfptext {
+#pfptext {
     color: white;
     font-family: monospace;
     position: relative;
