--- a/style.css
+++ b/style.css
@@ -247,6 +247,39 @@ div#scroll {
     right: 0;
     height: 100%;
     background-color: #ff000000;
+    display: flex;
+}
+
+span#goal {
+    color: #46b2ff;
+    font-family: monospace;
+    font-size: 2.3vh;
+    position: relative;
+    text-decoration: solid;
+    font-style: italic;
+    /* text-shadow: 3px 0px white; */
+    top: 10%;
+    height: 7%;
+}
+
+span#text {
+    position: relative;
+    top: 10%;
+    color: whitesmoke;
+    font-family: monospace;
+    font-size: 2vh;
+}
+
+span#snippets {
+    color: #46ffbc;
+    font-family: monospace;
+    font-size: 2.3vh;
+    position: relative;
+    text-decoration: solid;
+    font-style: italic;
+    /* text-shadow: 3px 0px white; */
+    top: 14%;
+    height: 7%;
 }
 
 #downlforwindows {
