--- a/style.css
+++ b/style.css
@@ -373,10 +373,10 @@ span#snippets {
 
 @media (min-width:320px)  { 
     #menu {
-        visibility: hidden;
+        visibility: hidden !important;
     }
     #mmenu {
-        visibility: visible;
+        visibility: visible !important;
     }
 }
 @media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
